<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sapelli SMS Relay</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_log">Log</string>
    <string name="menu_backup">Back up DB</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_main">Sapelli SMS Relay</string>
    <string name="service_name">excitesbackgroundservice</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="notification">The Service is running.</string>
    <string name="service_is_running">The Service is Running!</string>
    <string name="service_is_not_running">The Service is Not Running! Please restart the app</string>
    <string name="about_txt">\nFeatures:
\n
\nRelay service for receiving and transmitting SMS data messages on the field.
\n
\nDeveloped for ExCiteS Research Group at UCL by Michalis Vitos
\ninfo@michalisvitos.gr</string>
    <string name="application_icon">Application Icon</string>
    <string name="total_sms_received_">"Total SMS Received: "</string>
    <string name="total_sms_sent_">"Total SMS Sent: "</string>
    <string name="last_sms_received_">"Last SMS Received: "</string>
    <string name="last_sms_sent_">"Last SMS Sent: "</string>
    <string name="_">-</string>

</resources>