<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/service_running"
        style="@style/MainActivityPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/service_is_running"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <include layout="@layout/hr" />

    <LinearLayout
        style="@style/MainActivityPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/total_sms_received_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_sms_received_"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/total_sms_received"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        style="@style/MainActivityPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/total_sms_sent_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_sms_sent_"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/total_sms_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        style="@style/MainActivityPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/last_sms_received_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_sms_received_"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/last_sms_received"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        style="@style/MainActivityPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/last_sms_sent_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_sms_sent_"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/last_sms_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>